--- a/pom.xml
+++ b/pom.xml
@@ -45,23 +45,24 @@
 					<printFailingErrors>true</printFailingErrors>
 				</configuration>
             </plugin>
+			<!-- SpotBugs 설정 -->
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.2.0</version>
+				<version>4.2.2</version>
 				<configuration>
                     <effort>Max</effort>
 					<threshold>Low</threshold>
-					<omitVisitors>UnreadFields</omitVisitors>
+					<!-- <includeFilterFile>${session.executionRootDirectory}/spotbugs-security-include.xml</includeFilterFile>
+					<excludeFilterFile>${session.executionRootDirectory}/spotbugs-security-exclude.xml</excludeFilterFile> -->
+					<!-- <plugins>
+						<plugin>
+							<groupId>com.h3xstream.findsecbugs</groupId>
+							<artifactId>findsecbugs-plugin</artifactId>
+							<version>1.10.1</version>
+						</plugin>
+					</plugins> -->
 				</configuration>
-				<dependencies>
-					<!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
-					<dependency>
-					<groupId>com.github.spotbugs</groupId>
-					<artifactId>spotbugs</artifactId>
-					<version>4.2.2</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
