Add checkstyle on workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,5 @@ jobs:
       run: mvn pmd:check
     - name: Scan with SpotBugs
       run: mvn spotbugs:check
+    - name: Check code style with Checkstyle
+      run: mvn checkstyle:check
