--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -30,3 +28,17 @@ jobs:
       run: mvn spotbugs:check
     - name: Check code style with Checkstyle
       run: mvn checkstyle:check
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Install dependencies
+      run: mvn install -DskipTests
+    - name: Compile
+      run: mvn compile
+    - name: Run tests
+      run: mvn test
