--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,12 +30,15 @@ jobs:
       run: mvn checkstyle:check
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [8, 11, 16]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java }}
     - name: Install dependencies
       run: mvn install -DskipTests
     - name: Compile
