--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  scan:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -43,5 +43,5 @@ jobs:
       run: mvn install -DskipTests
     - name: Compile
       run: mvn compile
-    - name: Run tests
-      run: mvn test
+    - name: Run tests and measure code coverage
+      run: mvn verify
