--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,16 +38,16 @@ jobs:
         java: [8]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v1
-      with:
-        java-version: ${{ matrix.java }}
-    - name: Install dependencies
-      run: mvn install -DskipTests
-    - name: Compile
-      run: mvn compile
-    - name: Run tests and measure code coverage
-      run: mvn verify
+    # - name: Set up JDK ${{ matrix.java }}
+    #   uses: actions/setup-java@v1
+    #   with:
+    #     java-version: ${{ matrix.java }}
+    # - name: Install dependencies
+    #   run: mvn install -DskipTests
+    # - name: Compile
+    #   run: mvn compile
+    # - name: Run tests and measure code coverage
+    #   run: mvn verify
     - name: Run codacy-coverage-reporter
       uses: codacy/codacy-coverage-reporter-action@master
       with:
