--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,15 +32,12 @@ jobs:
     
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [8]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK ${{ matrix.java }}
+    - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
-        java-version: ${{ matrix.java }}
+        java-version: 8
     - name: Install dependencies
       run: mvn install -DskipTests
     - name: Compile
