--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,5 +40,15 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        
+    - name: Generate Dockerrun.aws.json
+      id: gen-dockerrun
+      env:
+        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_NAME: ${{ steps.build-image.outputs.image }}
+      run: |
+        apt update -yq && apt install -yq jq
+        jq -c '.Image.Name = "test"' Dockerrun.aws.json > "$IMAGE_TAG-Dockerrun.aws.json"
+        echo "::set-output name=dockerrun::$IMAGE_TAG-Dockerrun.aws.json"
 
    
