--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,10 +58,12 @@ jobs:
         S3_BUCKET: elasticbeanstalk-ap-northeast-2-364282015016
         AWS_REGION: ap-northeast-2
         APP_NAME: springboot
+        APP_ENV: Springboot-env-1
         APP_VERSION: ${{ github.sha }}
       run: |
         aws s3 cp --region $AWS_REGION ./$DOCKERRUN s3://$S3_BUCKET/$DOCKERRUN
         aws elasticbeanstalk create-application-version --application-name $APP_NAME --version-label $APP_VERSION \
           --source-bundle S3Bucket="$S3_BUCKET",S3Key="$DOCKERRUN" --auto-create-application
+        aws elasticbeanstalk update-environment --environment-name $APP_ENV --version-label $APP_VERSION
 
    
